--- a/client/style.css
+++ b/client/style.css
@@ -65,6 +65,7 @@ h2 {
   border-radius: 50%;
 }
 
+
 .black_btn {
   padding: 0.5rem 1rem;
   font-family: "Satoshi", sans-serif;
@@ -76,10 +77,35 @@ h2 {
   border: none;
   border-radius: 0.5rem;
   cursor: pointer;
+  transition: all 0.2s;
   margin-right: 5px;
 }
 
+.black_btn:before {
+  content: "";
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  transition: all 0.4s;
+  z-index: -1;
+}
 
+.black_btn:hover:before {
+  transform: scaleX(1.4) scaleY(1.6);
+  opacity: 0;
+}
+
+.black_btn:hover {
+  transform: translateY(3px);
+  box-shadow: -5px 10px 20px rgba(127, 255, 212, 0.8);
+}
+
+.black_btn:active {
+  transform: translateY(1px);
+  box-shadow: -3px 5px 10px rgba(127, 255, 212, 0.8);
+}
 
 #app {
   width: 100vw;
