--- a/client/style.css
+++ b/client/style.css
@@ -4,7 +4,7 @@
   margin: 0;
   padding: 0;
   box-sizing: border-box;
-  font-family: "Alegreya Sans", sans-serif;
+  font-family: "Satoshi", sans-serif;
 }
 
 body {
@@ -13,7 +13,6 @@ body {
 
 h1 {
   color: aquamarine;
-  font-family: "Satoshi", sans-serif;
   font-weight: 900;
   justify-content: center;
   text-align: center;
@@ -22,12 +21,16 @@ h1 {
 
 h2 {
   color:aquamarine;
-  font-family: "Satoshi", sans-serif;
   font-weight: 700;
   justify-content: center;
   text-align: center;
 }
 
+.disclaimer {
+  color: aquamarine;
+  opacity: 70%;
+  margin-bottom: 10px;
+}
 
 #intro_container {
   margin: 25vh;
@@ -53,22 +56,20 @@ h2 {
   object-fit: contain;
   margin-left: 0.5rem;
   border-radius: 50%;
-  transition: transform 0.35s ease-in-out, border-radius 0.35s ease-in-out, margin-top 0.35s ease-in-out, margin-left 0.35s ease-in-out;
+  transition: transform 0.35s ease-in-out, box-shadow 0.35s ease-in-out, margin-top 0.35s ease-in-out, margin-left 0.35s ease-in-out;
 
 }
 
 .logo:hover {
   margin-top: 2.5rem;
   margin-left: 2.5rem;
-  transform: scale(2.5) rotate(-5deg);
-  box-shadow: 6px 6px 12px rgba(0, 0, 0, 0.2);
-  border-radius: 50%;
+  transform: scale(2.5);
+  box-shadow: 6px 6px 12px rgba(127, 255, 212, 0.8);
 }
 
 
 .black_btn {
   padding: 0.5rem 1rem;
-  font-family: "Satoshi", sans-serif;
   font-weight: 700;
   font-size: 1rem;
   letter-spacing: 0.1rem;
@@ -123,6 +124,7 @@ h2 {
   width: 100%;
   height: 100%;
   overflow-y: scroll;
+  border-radius: 10px;
 
   display: flex;
   flex-direction: column;
@@ -132,6 +134,7 @@ h2 {
   scrollbar-width: none;
 
   padding-bottom: 20px;
+  margin-bottom: 10px;
   scroll-behavior: smooth;
 }
 
@@ -214,10 +217,11 @@ form {
   margin: 0 auto;
   padding: 10px;
   background: #40414F;
-
+  border-radius: 15px;
   display: flex;
   flex-direction: row;
   gap: 10px;
+  margin-bottom: 10px;
 }
 
 textarea {
@@ -228,7 +232,6 @@ textarea {
 
   padding: 10px;
   background: transparent;
-  border-radius: 5px;
   border: none;
   outline: none;
 }
